Avoid CromIAM errors on boot