@@ -79,6 +79,17 @@ object Publishing {
           addInstruction(installDebugFacilities(version.value))
         }
 
+        // Add a custom java opt for CromIAM, this avoids the following error on boot (from Akka):
+        //     class com.typesafe.sslconfig.ssl.DefaultHostnameVerifier (in unnamed module @0x5594a1b5)
+        //     cannot access class sun.security.util.HostnameChecker (in module java.base)
+        //     because module java.base does not export sun.security.util to unnamed module @0x5594a1b5
+        // See https://docs.oracle.com/en/java/javase/17/migrate/migrating-jdk-8-later-jdk-releases.html#GUID-2F61F3A9-0979-46A4-8B49-325BA0EE8B66
+        // TODO remove this once we upgrade Akka past 2.5
+        val addOpensJavaOpt =
+          if (projectName == "cromiam")
+            "--add-opens=java.base/sun.security.util=ALL-UNNAMED"
+          else ""
+
         /*
         If you use the 'exec' form for an entry point, shell processing is not performed and
         environment variable substitution does not occur.  Thus we have to /bin/bash here
@@ -114,7 +125,7 @@ object Publishing {
         entryPoint(
           "/bin/bash",
           "-c",
-          s"java $${JAVA_OPTS} -jar /app/$projectName.jar $${${projectName.toUpperCase.replaceAll("-", "_")}_ARGS} $${*}",
+          s"java $${JAVA_OPTS} ${addOpensJavaOpt} -jar /app/$projectName.jar $${${projectName.toUpperCase.replaceAll("-", "_")}_ARGS} $${*}",
           "--"
         )
         // for each custom setting (instruction) run addInstruction()
